# minichess

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chess_game.rs  main.rs  stockfish.rs  ui.rs
