[package]
name = "minichess"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chess = "3.2.0"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
crossterm = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
